[HERI] adding example shared preferences

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.binar.academy.materiapplication"
         minSdkVersion 15
@@ -27,7 +27,4 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-
-    //BUTTERKNIFE
-    compile 'com.jakewharton:butterknife-compiler:8.8.1'
 }
