--- a/reclistapp/src/main/AndroidManifest.xml
+++ b/reclistapp/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.MainActivity">
+        <activity android:name=".third.ThirdActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,6 +18,7 @@
         </activity>
 
         <activity android:name=".second.SecondActivity" />
+        <!--<activity android:name=".third.ThirdActivity" />-->
     </application>
 
 </manifest>
