--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':myfragmentapp', ':reclistapp', ':resourcemodapp'
+include ':app', ':myfragmentapp', ':reclistapp', ':resourcemodapp', ':patternexample', ':examplelifecycle'
