[HERI] adding singleton preference helper & update using AS 3.1

--- a/myfragmentapp/src/main/AndroidManifest.xml
+++ b/myfragmentapp/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity
             android:name=".second.SecondActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/fullScreenTheme" />
 
     </application>
