--- a/examplelifecycle/src/main/AndroidManifest.xml
+++ b/examplelifecycle/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.binar.academy.examplelifecycle">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -16,6 +17,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".SecondActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
